<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> neurGAI</string>
    <string name="euskaraz">Euskaraz</string>
    <string name="local_language">Castellano</string>
    <string name="bienvenidos">¡Bienvenido a neurGAI!</string>
    <string name="creditos">	    neurGAI\nUPV/EHU\nProyecto de innovación para la sostenibilidad.\nVicerrectorado de Estudiantes Empleo y Responsabilidad Social.</string>
    <string name="introducirAmplitud">Introduce la amplitud de calibración del filtro y pulsa el botón</string>
    <string name="calibrandoCAG">Calibrando el CAG del móvil&#8230;</string>
    <string name="calibrandoFiltro">Calibrando el filtro de entrada de audio del móvil&#8230;</string>
    <string name="ajustarConectoryVolumen">Conecta en la entrada de auriculares el conector de calibrado y sube el volumen al máximo</string>
    <string name="cerrarCalibrado">Filtro calibrado, pulsa para continuar</string>
    <string name="introducirAmplitudCorrectamente">Valor incorrecto</string>
    <string name="grabandoDatosMedida">Grabando datos medidos&#8230;</string>
    <string name="nulo">" "</string>
    <string name="pulsaParaContinuar">Pulsa para continuar</string>
    <string name="leyendoCalibracion">Leyendo los datos de la calibración&#8230;</string>
    <string name="introducirMedidaCorrectamente">Valor incorrecto</string>
    <string name="realizandoMedidasSinCalibrar">Realizando medidas sin calibrar&#8230; Pulsa para introducir la medida correcta</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tituloConfigTarifasLibres">Tarifas libre mercado (€/kWh) y emisiones CO2 (kgCO2/kWh)</string>
    <string name="cabeceraFicheroCalibracion">amplitud, frecuencia, RMS\n</string>
    <string name="cabeceraFicheroCostes">Comentarios, Fecha y Hora, Tiempo Unix, Potencia(W),
        PVPC,,,,,,,,,,Comercializadora libre\n
        ,,,,Emisiones CO2,2.0A,,,2.0DHA,,,2.0DHS,,,Emisiones CO2,2.0A,,,2.0DHA,,,2.0DHS \n
	 ,,,,
	 CO2(kg),
	 Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 CO2(kg),
     Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 Tarifa(€/kWh) ,Coste medida(€) ,Coste acumulado(€) ,
	 \n</string>
    <string name="pulsar">Pulsar</string>
    <string name="pvpc">PVPC</string>
    <string name="libre">Libre</string>
    <string name="notas">notas</string>
    <string name="t20dha">2.0DHA</string>
    <string name="t20a">2.0A (c€/kWh)</string>
    <string name="t20aMenu">2.0A (€/kWh)</string>
    <string name="t20dhs">2.0DHS</string>
    <string name="punta">Punta</string>
    <string name="valle">Valle</string>
    <string name="supervalle">SuperValle</string>
    <string name="llano">Llano</string>
    <string name="tituloAnotar">Comenta la medida</string>
    <string name="tituloTension">Nivel de tensión</string>
    <string name="costes">costes</string>
    <string name="error">Error</string>
    <string name="muestras">muestras</string>
    <string name="amplitudCalibrado">Amplitud de calibrado</string>
    <string name="medidaReferencia">Medida de referencia</string>
    <string name="emisionesPVPC">Emisiones Com. PVPC</string>
    <string name="emisionesLibre">Emisiones Com. Libre</string>
    <string name="unidadEmisiones">kg CO2/kWh</string>
    <string name="cantidadEmisionPVPC">0.36</string>
    <string name="cantidadEmisionLibre">0</string>
    <string name="co2">CO2 (g)</string>
    <string name="valor2.0Apunta">0.136625</string>
    <string name="valor2.0DHApunta">0.158862</string>
    <string name="valor2.0DHAvalle">0.084641</string>
    <string name="valor2.0DHSpunta">0.155545</string>
    <string name="valor2.0DHSllano">0.089017</string>
    <string name="valor2.0DHSsvalle">0.067736</string>
    <string name="nombreT20Apunta">t20A</string>
    <string name="nombreT20DHApunta">t20dhap</string>
    <string name="nombreT20DHAvalle">t20dhav</string>
    <string name="nombreT20DHSpunta">t20dhsp</string>
    <string name="nombreT20DHSllano">t20dhsll</string>
    <string name="nombreT20DHSsupervalle">t20dhssv</string>
    <string name="nombreEmisionPVPC">emisionPVPC</string>
    <string name="nombreEmisionLibre">emisionLibre</string>
    <string name="medidasDePotencia">Medidas de potencia (kW)</string>
    <string name="logo_ehu">logo EHU</string>
    <string name="title_activity_bluetooth_dialog">BluetoothDialog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="continuar">Continuar</string>
    <string name="parar">Parar</string>
    <string name="grabaryreiniciar">Grabar y reiniciar</string>
    <string name="anotar">Anotar</string>
    <string name="anotarTension">Anotar tension</string>
    <string name="grabarDatos">Grabar datos</string>
    <string name="tarifas">Tarifas y emisiones</string>
    <string name="sondaBluetooth">Sonda/Bluetooth</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="s1">Cada 2 segundos</string>
    <string name="s10">Cada 10 segundos</string>
    <string name="s30">Cada 30 segundos</string>
    <string name="m1">Cada minuto</string>
    <string name="m5">Cada 5 minutos</string>
    <string name="m10">Cda 10 minutos</string>
    <string name="castellano">Castellano</string>
    <string name="arabe">Árabe</string>
    <string name="textoIdioma">Idioma Castellano</string>
    <string name="sonda">Sonda</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">WIFI</string>
    <string name="buscarBT">Buscar dispositivos</string>
    <string name="buscandoBT">Buscando</string>
    <string name="dispositivosBT">Dispositivos Bluetooth</string>
    <string name="errorConexionBT">Error de conexión. Intentalo otra vez</string>
    <string name="configurandoRXBT">Configurando la recepción de medidas&#8230;</string>
    <string name="resetearDispositivo">Iniciada la recepción de datos. Resetea dispositivo.</string>
    <string name="conexionExitosa">Conexión éxitosa.</string>
    <string name="abriendoWAP">Abriendo WAP...</string>
    <string name="buscandoKL25z">Buscando KL25z...</string>
    <string name="kL25zEncontrado">¡KL25z encontrado!</string>
    <string name="kL25zNoEncontrado">KL25z no encontrado</string>
    <string name="calibracionMic">Calibración entrada MIC</string>
    <string name="preguntaCalibracion">¿Desea calibrar la entrada MIC o medirá solo a través de WIFI/BLUETOOTH?</string>
    <string name="calibrarMic">Calibrar MIC</string>
    <string name="soloWifiBt">Solo WIFI/BLUETOOTH</string>
    <string name="recuerdaSeleccionar">Recuerda seleccionar WIFI/BLUETOOTH en ajustes</string>
</resources>
